--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,6 +1,5 @@
 [package]
-org = "asmaj"
+org = "user"
 name = "notifications"
-version = "0.2.0"
+version = "0.1.0"
 distribution = "2201.4.0"
-export = ["notifications", "notifications.util"]
